I stopped using a LinkedList and used an ArrayList. This has cut time down to about 1 second and is thread safe.